--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,20 @@
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+stages:
+ - stage: build
+jobs:
+- job: A
+  steps:
+  - bash: echo "A"
 
-steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+- job: B
+  steps:
+  - bash: echo "B"
+ - 
+
+  
+
+    
+
+
